# TangeloMultiAgent

./: .gitignore  README.md  STAGE1_MATH_VALIDATION.md  STAGE3_TESTING_INSTRUCTIONS.md  STAGE4_TESTING_INSTRUCTIONS.md  pyproject.toml  test_consistency.py  test_multiscale_integration.py  test_stage4_integration.py
.claude/agents/: graphsage-package-analyst.md  graphvelo-package-analyst.md  math-validator.md  multivelo-package-analyst.md  node2vec-package-analyst.md  project-coordinator.md  python-developer.md  qa-tester.md  regvelo-package-analyst.md  scmomentum-package-analyst.md  software-architect.md  stt-package-analyst.md  tangelo-package-analyst.md  technical-writer.md  torchode-package-analyst.md  velovae-package-analyst.md  velovi-package-analyst.md
examples/: basic_usage.py  stage1_tutorial.ipynb  stage3_integrated_tutorial.ipynb  stage4_advanced_usage.ipynb  tangelo_velocity_tutorial.ipynb
tangelo_velocity/: __init__.py  api.py  config.py
tangelo_velocity/analysis/: __init__.py
tangelo_velocity/models/: __init__.py  base.py  encoders.py  loss_functions.py  multiscale.py  ode_dynamics.py  regulatory.py  stage0.py  stage1.py  stage2.py  stage3.py  stage4.py
tangelo_velocity/pl/: __init__.py
tangelo_velocity/plotting/: __init__.py
tangelo_velocity/preprocessing/: __init__.py  graph_builder.py  mudata_processor.py  node2vec_embedding.py
tangelo_velocity/tools/: __init__.py  velocity.py
tests/: __init__.py  test_graph_builder.py  test_integration_stage0.py  test_mudata_processor.py  test_stage1_model.py  test_stage3_integration.py
